raffia/tests/error/scss/at-rule/while/missing-condition.snap
---
source: raffia/tests/error.rs
---
error: component value is expected
  ┌─ missing-condition.scss:1:8
  │
1 │ @while {}
  │        ^


